test/compile-fail/resolution/redefinition/fn/expected.txt
error: the name `a` is defined multiple times
 --> top.rhdl:2:3
  |
1 | fn a() {}
  |    - previous definition of the type `a` here
2 | fn a() {}
  |    ^ `a` redefined here
